--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "lint:check": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "type-check": "tsc --noEmit",
+    "test:static": "pnpm run lint:check && pnpm run format:check && pnpm run type-check",
     "supabase:local": "./scripts/supabase-setup.sh local",
     "supabase:prod": "./scripts/supabase-setup.sh production",
     "supabase:status": "./scripts/supabase-setup.sh status",
@@ -29,16 +35,28 @@
     "lucide-react": "^0.468.0",
     "next": "^15.2.4",
     "next-themes": "^0.4.3",
-    "prettier": "^3.3.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "swiper": "^11.2.6"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/eslint": "^9.6.1",
     "@types/node": "22.10.2",
     "@types/react": "^19.0.2",
     "@types/react-dom": "19.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.40.0",
+    "@typescript-eslint/parser": "^8.40.0",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^15.5.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "postcss": "8.4.49",
+    "prettier": "^3.3.3",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "^1.0.7",
