--- a/.prettierrc
+++ b/.prettierrc
@@ -16,5 +16,13 @@
   "plugins": ["@trivago/prettier-plugin-sort-imports"],
   "importOrder": ["^react$", "^next(.*)$", "^@/(.*)$", "^[./]"],
   "importOrderSeparation": true,
-  "importOrderSortSpecifiers": true
+  "importOrderSortSpecifiers": true,
+  "overrides": [
+    {
+      "files": "*.{js,jsx,ts,tsx}",
+      "options": {
+        "parser": "typescript"
+      }
+    }
+  ]
 }
