--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
@@ -9,7 +9,12 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --watchAll=false",
     "test:static": "pnpm run lint:check && pnpm run format:check && pnpm run type-check",
+    "test:all": "pnpm run test:static && pnpm run test:ci",
     "supabase:local": "./scripts/supabase-setup.sh local",
     "supabase:prod": "./scripts/supabase-setup.sh production",
     "supabase:status": "./scripts/supabase-setup.sh status",
@@ -40,8 +45,12 @@
     "swiper": "^11.2.6"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/eslint": "^9.6.1",
+    "@types/jest": "^30.0.0",
     "@types/node": "22.10.2",
     "@types/react": "^19.0.2",
     "@types/react-dom": "19.0.2",
@@ -55,6 +64,8 @@
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "jest": "^30.0.5",
+    "jest-environment-jsdom": "^30.0.5",
     "postcss": "8.4.49",
     "prettier": "^3.3.3",
     "tailwind-merge": "^2.5.2",
